// ===============================================
// TRELLO DATABASE DBML SCHEMA (dbdiagram.io uchun)
// dbdiagram.io saytiga kirib ushbu kodni qo'ysangiz,
// tayyor interaktiv vizual ERD diagramma hosil bo'ladi va
// "Share" tugmasi orqali topshirish havolasini olishingiz mumkin!
// ===============================================

Table users {
  id int [pk, increment]
  username varchar(50) [unique, not null]
  email varchar(100) [unique, not null]
  password_hash varchar(255) [not null]
  full_name varchar(100) [not null]
  avatar_url varchar(255)
  bio text
  created_at timestamp
  updated_at timestamp
}

Table workspaces {
  id int [pk, increment]
  name varchar(100) [not null]
  slug varchar(120) [unique, not null]
  description text
  workspace_type varchar(50) [default: 'general']
  owner_id int [not null]
  created_at timestamp
  updated_at timestamp
}

Table workspace_members {
  id int [pk, increment]
  workspace_id int [not null]
  user_id int [not null]
  role varchar(20) [default: 'member'] // owner, admin, member, guest
  joined_at timestamp
}

Table boards {
  id int [pk, increment]
  workspace_id int [not null]
  title varchar(150) [not null]
  description text
  visibility varchar(20) [default: 'workspace'] // private, workspace, public
  background_color varchar(20) [default: '#0079bf']
  background_image_url varchar(255)
  is_template boolean [default: false]
  is_closed boolean [default: false]
  created_by int [not null]
  created_at timestamp
  updated_at timestamp
}

Table board_members {
  id int [pk, increment]
  board_id int [not null]
  user_id int [not null]
  role varchar(20) [default: 'normal'] // admin, normal, observer
  added_at timestamp
}

Table templates {
  id int [pk, increment]
  board_id int
  title varchar(150) [not null]
  description text
  category varchar(50) [default: 'Project Management']
  is_public boolean [default: true]
  created_by int [not null]
  created_at timestamp
}

Table lists {
  id int [pk, increment]
  board_id int [not null]
  title varchar(100) [not null]
  position decimal(10,2) [default: 65535]
  is_archived boolean [default: false]
  created_at timestamp
  updated_at timestamp
}

Table cards {
  id int [pk, increment]
  list_id int [not null]
  title varchar(255) [not null]
  description text
  position decimal(10,2) [default: 65535]
  start_date timestamp
  due_date timestamp
  is_completed boolean [default: false]
  is_archived boolean [default: false]
  cover_image_url varchar(255)
  created_by int [not null]
  created_at timestamp
  updated_at timestamp
}

Table card_members {
  id int [pk, increment]
  card_id int [not null]
  user_id int [not null]
  assigned_at timestamp
}

Table labels {
  id int [pk, increment]
  board_id int [not null]
  name varchar(50)
  color_code varchar(20) [not null]
  created_at timestamp
}

Table card_labels {
  id int [pk, increment]
  card_id int [not null]
  label_id int [not null]
}

Table checklists {
  id int [pk, increment]
  card_id int [not null]
  title varchar(150) [default: 'Checklist']
  position decimal(10,2) [default: 65535]
  created_at timestamp
}

Table checklist_items {
  id int [pk, increment]
  checklist_id int [not null]
  title varchar(255) [not null]
  is_completed boolean [default: false]
  position decimal(10,2) [default: 65535]
  due_date timestamp
  assigned_to int
  created_at timestamp
}

Table attachments {
  id int [pk, increment]
  card_id int [not null]
  uploaded_by int [not null]
  file_name varchar(255) [not null]
  file_url varchar(500) [not null]
  file_size int
  file_type varchar(100)
  uploaded_at timestamp
}

Table comments {
  id int [pk, increment]
  card_id int [not null]
  user_id int [not null]
  content text [not null]
  created_at timestamp
  updated_at timestamp
}

Table activities {
  id int [pk, increment]
  board_id int [not null]
  card_id int
  user_id int [not null]
  action_type varchar(50) [not null]
  details json
  created_at timestamp
}

// ===============================================
// BOG'LANISHLAR (RELATIONSHIPS)
// ===============================================

Ref: workspaces.owner_id > users.id
Ref: workspace_members.workspace_id > workspaces.id
Ref: workspace_members.user_id > users.id

Ref: boards.workspace_id > workspaces.id
Ref: boards.created_by > users.id
Ref: board_members.board_id > boards.id
Ref: board_members.user_id > users.id

Ref: templates.board_id > boards.id
Ref: templates.created_by > users.id

Ref: lists.board_id > boards.id

Ref: cards.list_id > lists.id
Ref: cards.created_by > users.id

Ref: card_members.card_id > cards.id
Ref: card_members.user_id > users.id

Ref: labels.board_id > boards.id
Ref: card_labels.card_id > cards.id
Ref: card_labels.label_id > labels.id

Ref: checklists.card_id > cards.id
Ref: checklist_items.checklist_id > checklists.id
Ref: checklist_items.assigned_to > users.id

Ref: attachments.card_id > cards.id
Ref: attachments.uploaded_by > users.id

Ref: comments.card_id > cards.id
Ref: comments.user_id > users.id

Ref: activities.board_id > boards.id
Ref: activities.card_id > cards.id
Ref: activities.user_id > users.id
